--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Ronja Güldenring"
 title_separator          : "-"
 name                     : &name "Ronja Güldenring"
 description              : &description "I am a PhD-student at DTU in Copenhagen"
-url                      : "https://rgring.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : http://localhost:4000 #"https://rgring.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "rgring/rgring.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -50,7 +50,7 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
 
 # SEO Related
-google_site_verification :
+google_site_verification : yxC75399MDZjYDntGaMH_HCI484yzLKevIikgvfJ2VM
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
